--- a/App/cart.html
+++ b/App/cart.html
@@ -21,14 +21,9 @@
     </header>
 
     <main class="main">
-        
-            <div class="searchbar">
-                <input type="text" class="searchbar__input" placeholder="Search for a product...">
-                <svg  class="searchbar__icon" width="32" height="32" viewBox="0 0 32 32" fill="none">
-                    <path
-                        d="M20.6667 18.6667H19.6134L19.24 18.3067C20.0733 17.3386 20.6823 16.1984 21.0234 14.9675C21.3646 13.7366 21.4294 12.4455 21.2134 11.1867C20.5867 7.48 17.4934 4.52 13.76 4.06666C12.4475 3.90062 11.1144 4.03703 9.86273 4.46545C8.61104 4.89387 7.47395 5.60296 6.53847 6.53844C5.60299 7.47392 4.8939 8.61101 4.46548 9.8627C4.03706 11.1144 3.90065 12.4475 4.06669 13.76C4.52003 17.4933 7.48003 20.5867 11.1867 21.2133C12.4456 21.4294 13.7366 21.3645 14.9675 21.0234C16.1984 20.6823 17.3386 20.0733 18.3067 19.24L18.6667 19.6133V20.6667L24.3334 26.3333C24.88 26.88 25.7734 26.88 26.32 26.3333C26.8667 25.7867 26.8667 24.8933 26.32 24.3467L20.6667 18.6667ZM12.6667 18.6667C9.34669 18.6667 6.66669 15.9867 6.66669 12.6667C6.66669 9.34666 9.34669 6.66666 12.6667 6.66666C15.9867 6.66666 18.6667 9.34666 18.6667 12.6667C18.6667 15.9867 15.9867 18.6667 12.6667 18.6667Z"
-                        fill="black" />
-                </svg>
+            <div class="main__header">
+                <h1>Your Basket</h1>
+                <button class="btn btn--primary">Confirm Order</button>
             </div>
 
             <section class="product_container">
@@ -41,6 +36,21 @@
                     </div>
                     <div class="btn btn--danger">Delete</div>
                 </article>
+            </section>
+
+            <section class="detail-container">
+                <div class="detail">
+                    <span class="detail-name">Sub Total: </span>
+                    <span class="detail-value">$26.9</span>
+                </div>
+                <div class="detail">
+                    <span class="detail-name">Sub Total: </span>
+                    <span class="detail-value">$2</span>
+                </div>
+                <div class="detail">
+                    <span class="detail-name">Sub Total: </span>
+                    <span class="detail-value">$28.9</span>
+                </div>
             </section>
     </main>
     
